--- a/Modeling Techniques/Simple/2_Feature_Engineering.ipynb
+++ b/Modeling Techniques/Simple/2_Feature_Engineering.ipynb
@@ -386,7 +386,7 @@
    "id": "intended-injury",
    "metadata": {},
    "source": [
-    "### Missing Values - Numerican Variables\n",
+    "### Missing Values - Numerical Variables\n",
     "\n",
     "To engineer missing values in numerical variables, we will:\n",
     "\n",
