--- a/Modeling Techniques/Intro/1_EDA.ipynb
+++ b/Modeling Techniques/Intro/1_EDA.ipynb
@@ -314,7 +314,7 @@
     "def analyze_na(df, var):\n",
     "    df = df.copy()\n",
     "    df[var] = np.where(df[var].isnull(), 1, 0)\n",
-    "    df.groupby(var)['target'].cum().plot.bar()\n",
+    "    df.groupby(var)['target'].sum().plot.bar()\n",
     "    \n",
     "    plt.title(var)\n",
     "    plt.show()\n",
