Update ROC AUC Plot.ipynb

--- a/Modeling Techniques/Functions/ROC AUC Plot.ipynb
+++ b/Modeling Techniques/Functions/ROC AUC Plot.ipynb
@@ -18,8 +18,7 @@
    "outputs": [],
    "source": [
     "probs = gb.predict_proba(x_val)[:,1]\n",
-    "y_pred = probs[:,1]\n",
-    "fpr, tpr, threshold = metrics.roc_curve(y_val, y_pred)\n",
+    "fpr, tpr, threshold = metrics.roc_curve(y_val, probs)\n",
     "roc_auc = auc(fpr, tpr)\n",
     "\n",
     "plt.title('Receiver Operating Characteristic')\n",
